# libgumball

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Nimbus.fnt  README.md  main.c  todo.txt
docs/: Doxyfile
examples/: CMakeLists.txt
examples/1_widgets/: 1_basic.c  2_custom.c
examples/2_containers/: 1_basic.c  2_nested.c
examples/3_buttons/: 3_userdata.c
lib/: CMakeLists.txt
lib/api/gumball/: gumball.h  gumball_core.h  gumball_devices.h  gumball_elements.h  gumball_events.h  gumball_ifaces.h  gumball_types.h
lib/api/gumball/core/: gumball_backend.h  gumball_inputsystem.h  gumball_logger.h  gumball_manager.h  gumball_navigation.h
lib/api/gumball/devices/: gumball_gamepad.h  gumball_inputdevice.h  gumball_keyboard.h  gumball_mouse.h
lib/api/gumball/elements/: gumball_button.h  gumball_common.h  gumball_container.h  gumball_controller.h  gumball_objectviewer.h  gumball_root.h  gumball_widget.h
lib/api/gumball/events/: gumball_event.h  gumball_event_button.h  gumball_event_gamepad.h  gumball_event_input.h  gumball_event_key.h  gumball_event_mouse.h  gumball_event_pointer.h
lib/api/gumball/ifaces/: gumball_iresource.h
lib/api/gumball/types/: gumball_animator.h  gumball_color.h  gumball_event.h  gumball_font.h  gumball_rectangle.h  gumball_renderer.h  gumball_texture.h  gumball_vector2.h
lib/src/backends/: gumball_backend_SDL3.c  gumball_backend_raylib.c
lib/src/backends/raylib/: gumball_raylib_draw.c  gumball_raylib_font.c  gumball_raylib_input.c  gumball_raylib_logger.c  gumball_raylib_renderer.c  gumball_raylib_texture.c  gumball_raylib_time.c
lib/src/core/: gumball_inputsystem.c  gumball_manager.c  gumball_navigation.c
lib/src/devices/: gumball_gamepad.c  gumball_inputdevice.c  gumball_keyboard.c  gumball_mouse.c
lib/src/elements/: gumball_button.c  gumball_common.c  gumball_container.c  gumball_controller.c  gumball_objectviewer.c  gumball_root.c  gumball_widget.c
lib/src/events/: gumball_event.c  gumball_event_gamepad.c  gumball_event_input.c  gumball_event_key.c  gumball_event_mouse.c
lib/src/ifaces/: gumball_iresource.c
lib/src/types/: gumball_animator.c  gumball_color.c  gumball_event.c  gumball_font.c  gumball_rectangle.c  gumball_texture.c  gumball_vector2.c
tests/: CMakeLists.txt  dev.c
